# dlops_n

./: .gitignore  .python-version  main.py  pyproject.toml  template.py
.github/workflows/: main.yaml
src/cnnClassifier/: __init__.py
